// Original file: proto/node_types.proto

import type { SimpleString as _spacemesh_v1_SimpleString, SimpleString__Output as _spacemesh_v1_SimpleString__Output } from '../../spacemesh/v1/SimpleString';

export interface VersionResponse {
  'versionString'?: (_spacemesh_v1_SimpleString | null);
}

export interface VersionResponse__Output {
  'versionString': (_spacemesh_v1_SimpleString__Output | null);
}
